[gd_scene load_steps=3 format=3 uid="uid://lhrmexknkno5"]

[ext_resource type="Texture2D" uid="uid://dxw100gdy0hnu" path="res://assets/background.jpg" id="1_5hkgl"]
[ext_resource type="Script" path="res://scenes/scripts/intro.gd" id="1_m2u31"]

[node name="intro" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_m2u31")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_left = -162.0
offset_top = -30.0
offset_right = 1204.0
offset_bottom = 738.0
texture = ExtResource("1_5hkgl")

[node name="menu_container" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -125.0
offset_top = -45.0
offset_right = 125.0
offset_bottom = 45.0
grow_horizontal = 2
grow_vertical = 2

[node name="start_button" type="Button" parent="menu_container"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 50
text = "Start"
metadata/_edit_group_ = true

[node name="quit_button" type="Button" parent="menu_container"]
layout_mode = 2
size_flags_stretch_ratio = 0.0
theme_override_font_sizes/font_size = 50
text = "Quit
"
metadata/_edit_group_ = true

[connection signal="pressed" from="menu_container/start_button" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="menu_container/quit_button" to="." method="_on_quit_pressed"]
